--- a/example/out1.html
+++ b/example/out1.html
@@ -20276,9 +20276,9 @@ var tracks_heigh={"pO83_CORR":133.333333333333,"pO83_CORR.indel":133.33333333333
 <svg id='demo-tiger' xmlns='http://www.w3.org/2000/svg' style='display: inline; width: inherit; min-width: inherit; max-width: inherit; height: inherit; min-height: inherit; max-height: inherit;' viewBox="0 0 1300 500" version="1.1">
 <text class='myth' x="110.5" y="116.666666666667" style="font-size:15px;fill:black;text-anchor:end;alignment-baseline:middle" >pO83_CORR.reverse</text>
 <text class='myth' x="110.5" y="250" style="font-size:15px;fill:black;text-anchor:end;alignment-baseline:middle" >pO83_CORR</text>
-<defs>    <clipPath id="cut-pO83_CORR-NC_017659.1-1"><path d="M130 183.333333333333 L911.469849246231 183.333333333333 L911.469849246231 316.666666666667 L130 316.666666666667 Z" />     </clipPath>  </defs>
+<defs>    <clipPath id="cut-pO83_CORR-NC_017659.1-1"><path class='myth' d="M130 183.333333333333 L911.469849246231 183.333333333333 L911.469849246231 316.666666666667 L130 316.666666666667 Z" />     </clipPath>  </defs>
 <text class='myth' x="110.5" y="383.333333333333" style="font-size:15px;fill:black;text-anchor:end;alignment-baseline:middle" >pO83_CORR.indel</text>
-<defs>    <clipPath id="cut-pO83_CORR.indel-NC_017659.1.fake-1"><path d="M130 316.666666666667 L684.545755091246 316.666666666667 L684.545755091246 450 L130 450 Z" />     </clipPath>  </defs>
+<defs>    <clipPath id="cut-pO83_CORR.indel-NC_017659.1.fake-1"><path class='myth' d="M130 316.666666666667 L684.545755091246 316.666666666667 L684.545755091246 450 L130 450 Z" />     </clipPath>  </defs>
 
 <line x1="130" y1="460" x2="1105" y2="460" style="stroke:green;stroke-width:0.5"/>
 <line x1="130" y1="455" x2="130" y2="460" style="stroke:green;stroke-width:0.5;opacity:1"/>
@@ -21385,8 +21385,8 @@ var tracks_heigh={"pO83_CORR":133.333333333333,"pO83_CORR.indel":133.33333333333
 <tspan>strand -> +</tspan>
 <tspan>indentity -> 100.00%</tspan>
 <tspan>alignment_length -> 141601</tspan></title>
- <defs>    <clipPath id="clip_130-249.333333333333-911.469849246231-249.333333333333-130-382.666666666667-684.545755091246-382.666666666667"><path d="M130 249.333333333333 L911.469849246231 249.333333333333 L684.545755091246 382.666666666667 L130 382.666666666667 Z" /></clipPath>  </defs>
-<path d="M705.046284051838 254.666666666667 L18962.2500661201 254.666666666667 L18871.9961650357 378.666666666667 L614.792382967469 378.666666666667 Z"  clip-path="url(#clip_130-249.333333333333-911.469849246231-249.333333333333-130-382.666666666667-684.545755091246-382.666666666667)" style="stroke:black;stroke-width: 1;fill:orange;opacity:0.5" />
+ <defs>    <clipPath id="clip_130-249.333333333333-911.469849246231-249.333333333333-130-382.666666666667-684.545755091246-382.666666666667"><path class='myth' d="M130 249.333333333333 L911.469849246231 249.333333333333 L684.545755091246 382.666666666667 L130 382.666666666667 Z" /></clipPath>  </defs>
+<path class='myth' d="M705.046284051838 254.666666666667 L18962.2500661201 254.666666666667 L18871.9961650357 378.666666666667 L614.792382967469 378.666666666667 Z"  clip-path="url(#clip_130-249.333333333333-911.469849246231-249.333333333333-130-382.666666666667-684.545755091246-382.666666666667)" style="stroke:black;stroke-width: 1;fill:orange;opacity:0.5" />
 </g>
 
 
@@ -21428,7 +21428,7 @@ var tracks_heigh={"pO83_CORR":133.333333333333,"pO83_CORR.indel":133.33333333333
 <tspan>strand -> +</tspan>
 <tspan>indentity -> 99.89%</tspan>
 <tspan>alignment_length -> 1898</tspan></title>
- <path d="M1.1947897381645 254.666666666667 L245.911795821211 254.666666666667 L155.657894736842 378.666666666667 L-89.0591113462047 378.666666666667 Z"  clip-path="url(#clip_130-249.333333333333-911.469849246231-249.333333333333-130-382.666666666667-684.545755091246-382.666666666667)" style="stroke:black;stroke-width: 1;fill:orange;opacity:0.49945" />
+ <path class='myth' d="M1.1947897381645 254.666666666667 L245.911795821211 254.666666666667 L155.657894736842 378.666666666667 L-89.0591113462047 378.666666666667 Z"  clip-path="url(#clip_130-249.333333333333-911.469849246231-249.333333333333-130-382.666666666667-684.545755091246-382.666666666667)" style="stroke:black;stroke-width: 1;fill:orange;opacity:0.49945" />
 </g>
 
 
